# lerppu

./: .gitignore  .pre-commit-config.yaml  data.csv  data.html  data.json  index.html  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: lint.yml  run.yml
frontend/: package.json
frontend/src/: App.tsx  consts.ts  hooks.ts  index.css  types.ts
frontend/src/components/: DataTable.tsx  MultiSelect.tsx
lerppu/: __main__.py  caching_http_transport.py  download.py  html_output.py  models.py  process.py  validation.py
lerppu/inference/: size.py  sku.py  type.py  vendor.py
lerppu/sources/: base.py  datablocks.py  dustinhome.py  jimms.py  proshop.py  sources.py  verk.py
