[project]
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
mccabe.max-complexity = 10
flake8-tidy-imports.ban-relative-imports = "all"
select = [
    "ANN",
    "B",
    "C",
    "E",
    "F",
    "I",
    "RET",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN003",
    "ANN202",
    "ANN401",
    "RET504",
    "SIM105",
]
