[project]
requires-python = ">=3.13"
name = "lerppu"
version = "0.1.0"

dependencies = [
    "beautifulsoup4~=4.11",
    "diskcache~=5.4",
    "httpx~=0.23",
    "pandas~=1.4",
    "plotly~=5.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
mccabe.max-complexity = 10
flake8-tidy-imports.ban-relative-imports = "all"
select = [
    "ANN",
    "B",
    "C",
    "E",
    "F",
    "I",
    "RET",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN003",
    "ANN202",
    "ANN401",
    "RET504",
    "SIM105",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
